--- a/css/responsive.css
+++ b/css/responsive.css
@@ -42,7 +42,7 @@
   *************************/
 
   #logo {
-    padding: 1% 25% 0;
+    padding: 1% 25%;
   }
 
   #mobileHeaderPic {
@@ -60,7 +60,7 @@
   }
 
   #desktopNav ul {
-    margin: 1% 1% 0;
+    margin: 1%;
     list-style: none;
     padding: 0;
   }
@@ -68,7 +68,7 @@
   #desktopNav ul li {
     float: left;
     width: 18%;
-    margin: 1% 1% -1%;
+    margin: 1% 1% -1.85%;
     padding: 0;
   }
 
